	information.
2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Modified USER_AGENT string for Linux to include OS and architecture
	information.
2017-09-11 Fred Gleason <fredg@paravelsystems.com>
	* Added a USER_AGENT entry for the Rivendell-C-API.
2017-09-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.1.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/config.cpp' that caused the USER_AGENT
	string to mis-report the version number under Windows.
2017-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Added filter controls to rdlogeditb(1).
2017-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Enabled deletion of multiple logs in rdlogeditb(1).
2017-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.3.0.
2017-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that caused the Date Picker dialog to
	load/save incorrect date values.
2017-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlibraryb(1) and rdlogeditb(1) that caused the
	incorrect version string to be displayed on the title bar.
2017-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.3.1.
2018-07-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a race that caused segfaults when stopping audio playout
	under ALSA.
2018-08-30 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2018-09-10 Fred Gleason <fredg@paravelsystems.com>
	* Modified build system to build against 'rivwebcapi'.
	* Fixed bugs that caused corruption of UTF-8 strings.
2019-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that failed to abort the log edit
	operation after getting an error from the 'ListLog' API call.
2019-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that caused corruption of log
	names containing multibyte UTF-8 characters.