@@ -2,7 +2,7 @@
 //
 // Remote log editor for Rivendell
 //
-//   (C) Copyright 2017 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2017-2019 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License as
@@ -45,7 +45,7 @@ MainWidget::MainWidget(QWidget *parent)
   //
   // Read Command Options
   //
-  CmdSwitch *cmd=new CmdSwitch("walltime-panel",PACKAGE_VERSION,RDLOGEDITB_USAGE);
+  CmdSwitch *cmd=new CmdSwitch("rdlogeditb",PACKAGE_VERSION,RDLOGEDITB_USAGE);
   for(unsigned i=0;i<cmd->keys();i++) {
   }
   delete cmd;
